--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "api": "1.0.0",
   "main": "code.js",
   "editorType": [
-    "figma",
-    "figjam"
-  ]
+    "figma"
+  ],
+  "ui": "ui.html"
 }
